fix: shutdown executor service on server shutdown